init the summoner to forge the runes

--- a/Mobile/Forge Wizard/Base.lproj/Main.storyboard
+++ b/Mobile/Forge Wizard/Base.lproj/Main.storyboard
@@ -250,21 +250,44 @@
             </objects>
             <point key="canvasLocation" x="1389.5999999999999" y="400.74962518740631"/>
         </scene>
-        <!--View Controller-->
+        <!--Forge Runes-->
         <scene sceneID="cEk-bY-M10">
             <objects>
-                <viewController id="eQN-aI-jrX" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="ForgeRunesViewController" id="eQN-aI-jrX" customClass="ForgeRunesViewController" customModule="Forge_Wizard" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="wwv-dy-Dou">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="YourForge" translatesAutoresizingMaskIntoConstraints="NO" id="wgd-Dn-bke">
+                                <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                            </imageView>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="7IW-zU-z8b">
+                                <rect key="frame" x="0.0" y="64" width="375" height="554"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <connections>
+                                    <outlet property="dataSource" destination="eQN-aI-jrX" id="Qx8-HA-VyS"/>
+                                    <outlet property="delegate" destination="eQN-aI-jrX" id="gaB-E9-BY9"/>
+                                </connections>
+                            </tableView>
+                        </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <constraints>
+                            <constraint firstItem="7IW-zU-z8b" firstAttribute="top" secondItem="qDe-Bo-S0y" secondAttribute="top" id="5xe-pp-UD2"/>
+                            <constraint firstItem="wgd-Dn-bke" firstAttribute="leading" secondItem="qDe-Bo-S0y" secondAttribute="leading" id="GMY-be-NBh"/>
+                            <constraint firstItem="wgd-Dn-bke" firstAttribute="top" secondItem="wwv-dy-Dou" secondAttribute="top" id="J3g-UG-T9k"/>
+                            <constraint firstItem="wgd-Dn-bke" firstAttribute="trailing" secondItem="qDe-Bo-S0y" secondAttribute="trailing" id="UQa-4o-6Yb"/>
+                            <constraint firstItem="7IW-zU-z8b" firstAttribute="leading" secondItem="qDe-Bo-S0y" secondAttribute="leading" id="ZCd-l9-H3V"/>
+                            <constraint firstAttribute="bottom" secondItem="wgd-Dn-bke" secondAttribute="bottom" id="kN0-iY-uKB"/>
+                            <constraint firstItem="qDe-Bo-S0y" firstAttribute="bottom" secondItem="7IW-zU-z8b" secondAttribute="bottom" id="ozz-ld-wFc"/>
+                            <constraint firstItem="qDe-Bo-S0y" firstAttribute="trailing" secondItem="7IW-zU-z8b" secondAttribute="trailing" id="stk-De-E21"/>
+                        </constraints>
                         <viewLayoutGuide key="safeArea" id="qDe-Bo-S0y"/>
                     </view>
-                    <navigationItem key="navigationItem" id="plz-a9-Q80"/>
+                    <navigationItem key="navigationItem" title="Forge Runes" id="plz-a9-Q80"/>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="fSs-Td-6cn" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="524" y="1117"/>
+            <point key="canvasLocation" x="524" y="1116.7916041979011"/>
         </scene>
         <!--Patch Changes-->
         <scene sceneID="U8C-uf-nA3">
@@ -931,11 +954,11 @@
             </objects>
             <point key="canvasLocation" x="-508" y="390"/>
         </scene>
-        <!--Forge Rune-->
+        <!--Forge Runes-->
         <scene sceneID="SLJ-vq-UQy">
             <objects>
                 <navigationController automaticallyAdjustsScrollViewInsets="NO" id="RZt-IC-IoL" sceneMemberID="viewController">
-                    <tabBarItem key="tabBarItem" title="Forge Rune" image="Quiz" id="g95-su-N0P">
+                    <tabBarItem key="tabBarItem" title="Forge Runes" image="Quiz" id="g95-su-N0P">
                         <offsetWrapper key="titlePositionAdjustment" horizontal="0.0" vertical="-4"/>
                     </tabBarItem>
                     <toolbarItems/>
@@ -994,6 +1017,7 @@
         <image name="Share" width="13" height="17"/>
         <image name="Support" width="24" height="24"/>
         <image name="Top" width="24" height="24"/>
+        <image name="YourForge" width="375" height="667"/>
         <image name="grid-placeholder" width="150" height="150"/>
         <image name="isFree" width="15" height="15"/>
         <image name="patchbg" width="375" height="667"/>
