finish the app last touch

--- a/Mobile/CellsNibs/RuneBuildTableViewCell.xib
+++ b/Mobile/CellsNibs/RuneBuildTableViewCell.xib
@@ -23,11 +23,11 @@
         <tableViewCell contentMode="scaleToFill" selectionStyle="none" indentationWidth="10" rowHeight="220" id="KGk-i7-Jjw" customClass="RuneBuildTableViewCell" customModule="Forge_Wizard" customModuleProvider="target">
             <rect key="frame" x="0.0" y="0.0" width="320" height="220"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-            <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
+            <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
                 <rect key="frame" x="0.0" y="0.0" width="320" height="219.5"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
-                    <view userInteractionEnabled="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="oif-iF-r2t">
+                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="oif-iF-r2t">
                         <rect key="frame" x="12" y="0.0" width="296" height="211.5"/>
                         <subviews>
                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="environment-constructed-1" translatesAutoresizingMaskIntoConstraints="NO" id="Jbf-6a-wrr">
@@ -36,7 +36,7 @@
                                     <constraint firstAttribute="height" constant="190" id="x0H-gg-Cy2"/>
                                 </constraints>
                             </imageView>
-                            <view userInteractionEnabled="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="9EA-7k-klZ">
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="9EA-7k-klZ">
                                 <rect key="frame" x="0.0" y="0.0" width="296" height="190"/>
                                 <subviews>
                                     <view userInteractionEnabled="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="2hu-O4-is7">
@@ -221,23 +221,6 @@
                                     </userDefinedRuntimeAttribute>
                                 </userDefinedRuntimeAttributes>
                             </view>
-                            <button opaque="NO" userInteractionEnabled="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="clip" translatesAutoresizingMaskIntoConstraints="NO" id="AtX-vQ-T6I">
-                                <rect key="frame" x="247" y="173.5" width="29" height="32"/>
-                                <color key="backgroundColor" red="0.70980392156862748" green="0.59607843137254901" blue="0.34509803921568627" alpha="1" colorSpace="calibratedRGB"/>
-                                <constraints>
-                                    <constraint firstAttribute="width" constant="29" id="KxY-XL-32o"/>
-                                    <constraint firstAttribute="height" constant="32" id="cpA-pu-c13"/>
-                                </constraints>
-                                <fontDescription key="fontDescription" name="BeaufortforLOL-Bold" family="BeaufortforLOL-Bold" pointSize="7"/>
-                                <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                <inset key="titleEdgeInsets" minX="0.0" minY="20" maxX="10" maxY="0.0"/>
-                                <state key="normal" image="Dislike"/>
-                                <userDefinedRuntimeAttributes>
-                                    <userDefinedRuntimeAttribute type="number" keyPath="cornerRadius">
-                                        <real key="value" value="2"/>
-                                    </userDefinedRuntimeAttribute>
-                                </userDefinedRuntimeAttributes>
-                            </button>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="1500" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="PDv-Cz-MGc">
                                 <rect key="frame" x="250.5" y="193.5" width="23" height="9"/>
                                 <constraints>
@@ -278,6 +261,26 @@
                                 <color key="shadowColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                 <size key="shadowOffset" width="0.5" height="0.5"/>
                             </label>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="clip" translatesAutoresizingMaskIntoConstraints="NO" id="AtX-vQ-T6I">
+                                <rect key="frame" x="247" y="173" width="29" height="32"/>
+                                <color key="backgroundColor" red="0.70980392156862748" green="0.59607843137254901" blue="0.34509803921568627" alpha="1" colorSpace="calibratedRGB"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="29" id="KxY-XL-32o"/>
+                                    <constraint firstAttribute="height" constant="32" id="cpA-pu-c13"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" name="BeaufortforLOL-Bold" family="BeaufortforLOL-Bold" pointSize="7"/>
+                                <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <inset key="titleEdgeInsets" minX="0.0" minY="20" maxX="10" maxY="0.0"/>
+                                <state key="normal" image="Dislike"/>
+                                <userDefinedRuntimeAttributes>
+                                    <userDefinedRuntimeAttribute type="number" keyPath="cornerRadius">
+                                        <real key="value" value="2"/>
+                                    </userDefinedRuntimeAttribute>
+                                </userDefinedRuntimeAttributes>
+                                <connections>
+                                    <action selector="removeBuild:" destination="KGk-i7-Jjw" eventType="touchUpInside" id="Bj6-k5-Jg2"/>
+                                </connections>
+                            </button>
                         </subviews>
                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
@@ -329,7 +332,7 @@
                 <outlet property="runeTitle" destination="1SS-2V-0ZN" id="yfr-HR-MBP"/>
                 <outlet property="second_rune" destination="DMP-Zx-fEF" id="G6D-Gx-97f"/>
             </connections>
-            <point key="canvasLocation" x="86" y="-98"/>
+            <point key="canvasLocation" x="-111" y="-158"/>
         </tableViewCell>
     </objects>
     <resources>
